--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#40E0D0</color>
+    <color name="colorPrimaryDark">#40E0D0</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="pinkGirl">#FFC0CB</color>
+    <color name="blueBoy">#87CEEB</color>
+
 </resources>
