主界面使用RecyclerView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,22 +15,9 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <Button
-        android:id="@+id/bt_line_chart"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/line_chart" />
-
-    <Button
-        android:id="@+id/bt_bar_chart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/bar_chart" />
-
-    <Button
-        android:id="@+id/bt_pie_chart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/bie_chart" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
