--- a/app/src/main/res/layout/custom_marker_view.xml
+++ b/app/src/main/res/layout/custom_marker_view.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="42dp"
-    android:layout_height="32dp"
-    android:background="@drawable/marker2">
+    android:layout_width="32dp"
+    android:layout_height="24dp"
+    android:background="@drawable/ic_bubble_dialog">
 
     <TextView
         android:id="@+id/tv_marker_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="7dp"
+        android:layout_centerInParent="true"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="12sp" />
 
 </RelativeLayout>
