--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="pinkGirl">#FFC0CB</color>
     <color name="blueBoy">#87CEEB</color>
 
+    <color name="seaShell">#FFF5EE</color>
+
 </resources>
