--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,34 @@
         <item name="contentInsetStartWithNavigation">0dp</item>
     </style>
 
+    <!--自定义用于去除背景-->
+    <style name="CustomDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item><!--去除边框-->
+        <item name="android:windowIsFloating">true</item><!--浮现在activity上-->
+        <item name="android:windowIsTranslucent">false</item><!--窗口不透明-->
+        <item name="android:windowNoTitle">true</item><!--去除标题-->
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item><!--背景颜色透明-->
+        <item name="android:backgroundDimEnabled">true</item><!--Dialog以外区域模糊-->
+    </style>
+
+    <!--自定义EditView Style-->
+    <style name="CustomEditText" parent="Base.Widget.AppCompat.EditText">
+        <item name="android:layout_width">32dp</item>
+        <item name="android:layout_height">24dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">6dp</item>
+        <item name="android:background">@drawable/bg_edit_text</item>
+        <item name="android:maxLength">2</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:inputType">number</item>
+    </style>
+
+    <!--自定义TextView Style-->
+    <style name="CustomTextView" parent="TextAppearance.AppCompat.Widget.TextView.SpinnerItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">6dp</item>
+    </style>
+
 </resources>
