--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
 
         <!-- 允许使用transitions -->
         <item name="android:windowContentTransitions">true</item>
-        <!--是否覆盖执行，可以理解成是否同步执行还是顺序执行-->
+        <!--是否覆盖执行，顺序执行-->
         <item name="android:windowAllowEnterTransitionOverlap">false</item>
         <item name="android:windowAllowReturnTransitionOverlap">false</item>
     </style>
